# PhotoRescue

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  api.ts  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows-app-manifest.xml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
apps/desktop/src/components/: ActivityLog.tsx  CandidateTable.tsx  RecoveryBar.tsx  SafetyNotice.tsx  ScanSetup.tsx  ScanStatus.tsx
apps/desktop/src/lib/: format.test.ts  format.ts
crates/photorescue-domain/: Cargo.toml
crates/photorescue-domain/src/: lib.rs
crates/photorescue-index/: Cargo.toml
crates/photorescue-index/src/: lib.rs
crates/photorescue-logging/: Cargo.toml
crates/photorescue-logging/src/: lib.rs
crates/photorescue-platform/: Cargo.toml
crates/photorescue-platform/src/: lib.rs
crates/photorescue-recovery/: Cargo.toml
crates/photorescue-recovery/src/: lib.rs
crates/photorescue-scanner/: Cargo.toml
crates/photorescue-scanner/src/: carvers.rs  lib.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  ROADMAP.md
release/: PhotoRescue_0.1.0_x64_en-US.msi  README.md  checksums.sha256
scripts/: build.ps1  common.ps1  create-shortcut.ps1  dev.ps1  package.ps1
