[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/photorescue-domain",
  "crates/photorescue-index",
  "crates/photorescue-logging",
  "crates/photorescue-platform",
  "crates/photorescue-recovery",
  "crates/photorescue-scanner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["PhotoRescue contributors"]
repository = "https://github.com/WillGabrielc137/PhotoRescue"

[workspace.dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1.4"
fs2 = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
